# 4courses_electronics_shop

./: .coverage  class_el_shop.py  pyproject.toml
4courses_electronics_shop/: pyproject.toml
test_class_el_shop/: conftest.py  test_class_el_shop.py
tests/: test_class_el_shop.py
