[tool.poetry]
name = "4courses-electronics-shop"
version = "0.1.0"
description = ""
authors = ["irinaloskutova <l.irinka@mail.ru>"]
readme = "README.md"
packages = [{include = "4courses_electronics_shop"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
